Fix overflow issue in hideoverflow function.

--- a/resources/scss/components/notification.scss
+++ b/resources/scss/components/notification.scss
@@ -34,6 +34,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    word-break: break-all;
   }
 
   :global(.icon) {
